# konijn

./: .gitignore  README.md  dune-project  konijn.opam
lib/: dune  env.ml
lib/cost-size-tuple/: dune  expr.ml
lib/interfaces/: base_modules.ml  context.ml  dune  name.ml
lib/parsers/: dune
lib/syntax/: context.ml  dune  name.ml  name.mli  rules.ml  rules.mli  simple_type.ml  term.ml  term.mli
lib/utils/: dune  lists.ml  math.ml
test/: dune  konijn.ml
